--- a/SMX2-M12-IntroHTML-GitHubPages-main/index.html
+++ b/SMX2-M12-IntroHTML-GitHubPages-main/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--añadir título de página (nombre del alumno) -->
-    <!--añadir ícono de página de https://fontawesome.com/-->
+    <!--añadir título de página (nombre del alumno) --> <Title>Gabriel Huarcaya y Mar Salón</Title>
+
+    <!--añadir ícono de página de https://fontawesome.com/--> <link rel="icon" type="image/x-icon"  href=" ../../img/icono.png">
 </head>
 <body>
     <h1>Web Browsers</h1>
     <p>The purpose of a web browser (<a href="https://www.google.com/intl/es/chrome/">Chrome</a>, <a href="https://www.microsoft.com/es-es/edge">Edge</a>, <a href="https://www.mozilla.org/es-ES/firefox/">Firefox</a>, <a href="https://www.apple.com/es/safari/">Safari</a>) is to read HTML documents and display them correctly.</p>
-    <!--añadir los logos de los navegadores listados  -->
+    <!--añadir los logos de los navegadores listados  --> 
     <p>A browser does not display the HTML tags, but uses them to determine how to display the document:</p>
-    <img src="./img/img1.png" alt="imagen" width="35%">
+    <img src="img/img1.png" alt="imagen" width="35%">
     <hr/>
     <h1>HTML Page Structure</h1>
     <p>Below is a visulization of an HTML page structure:</p>
-    <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen-->
-    <!--añadir una linea horizontal -->
-    <!--añadir un encabezado donde indiques el título de una nueva sección llamada "Mi repositories"  -->
-    <!--añadir dos enlaces a dos de tus repositorios de GITHUB que se han de abrir en pestañas diferentes del navegador. Ojo, que los repositorios han de ser públicos  -->
+    <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen--> <img src="img/img2.png" alt="imagen2" width="100%">
+    <!--añadir una linea horizontal --> <hr/>
+    <!--añadir un encabezado donde indiques el título de una nueva sección llamada "Mi repositories"  --> <h1> Mi repositories</h1>
+    <!--añadir dos enlaces a dos de tus repositorios de GITHUB que se han de abrir en pestañas diferentes del navegador. Ojo, que los repositorios han de ser públicos  --> <link rel="repositories" href="https://github.com/gabrielfabrizio10/SOPAXD">
+    <link rel="repositories" href="https://github.com/gabrielfabrizio10/Imagenes-Adaptables">
     
 </body>
 </html>
