--- a/SMX2-M12-IntroHTML-GitHubPages-main/index.html
+++ b/SMX2-M12-IntroHTML-GitHubPages-main/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--añadir título de página (nombre del alumno) --> <Title>Gabriel Huarcaya y Mar Salón</Title>
 
-    <!--añadir ícono de página de https://fontawesome.com/--> <link rel="icon" type="image/x-icon"  href=" ../../img/icono.png">
+    <!--añadir ícono de página de https://fontawesome.com/--> <link rel="icon" type="image/x-icon"  href="img/icono.png">
 </head>
 <body>
     <h1>Web Browsers</h1>
