--- a/SMX2-M12-IntroHTML-GitHubPages-main/index.html
+++ b/SMX2-M12-IntroHTML-GitHubPages-main/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--añadir título de página (nombre del alumno) --> <Title>Gabriel Huarcaya y Mar Salón</Title>
 
-    <!--añadir ícono de página de https://fontawesome.com/--> <link rel="icon" type="image/x-icon"  href="img/icono.png">
+    <!--añadir ícono de página de https://fontawesome.com/--> <link rel="icon" href="img/icono.svg">
 </head>
 <body>
     <h1>Web Browsers</h1>
     <p>The purpose of a web browser (<a href="https://www.google.com/intl/es/chrome/">Chrome</a>, <a href="https://www.microsoft.com/es-es/edge">Edge</a>, <a href="https://www.mozilla.org/es-ES/firefox/">Firefox</a>, <a href="https://www.apple.com/es/safari/">Safari</a>) is to read HTML documents and display them correctly.</p>
-    <!--añadir los logos de los navegadores listados  --> 
+    <!--añadir los logos de los navegadores listados  --> <img src="edge" alt="">
     <p>A browser does not display the HTML tags, but uses them to determine how to display the document:</p>
     <img src="img/img1.png" alt="imagen" width="35%">
     <hr/>
