--- a/SMX2-M12-IntroHTML-GitHubPages-main/index.html
+++ b/SMX2-M12-IntroHTML-GitHubPages-main/index.html
@@ -11,10 +11,10 @@
 <body>
     <h1>Web Browsers</h1>
     <p>The purpose of a web browser (<a href="https://www.google.com/intl/es/chrome/">Chrome</a>, <a href="https://www.microsoft.com/es-es/edge">Edge</a>, <a href="https://www.mozilla.org/es-ES/firefox/">Firefox</a>, <a href="https://www.apple.com/es/safari/">Safari</a>) is to read HTML documents and display them correctly.</p>
-    <!--añadir los logos de los navegadores listados  --> <img src="img/edge.jpg" alt="Edge"> 
-    <img src="img/Firefox_logo.svg.png" alt="firefox">
-    <img src="img/Google_Chrome_.svg.png" alt="Google_Chrome_">
-    <img src="img/Safari_browser.svg.png" alt="Safari_browser">
+    <!--añadir los logos de los navegadores listados  --> <img src="img/edge.jpg" alt="Edge" width="50%" height="50%"> 
+    <img src="img/Firefox_logo.svg.png" alt="firefox" width="50%" height="50%">
+    <img src="img/Google_Chrome_.svg.png" alt="Google_Chrome_" width="50%" height="50%">
+    <img src="img/Safari_browser.svg.png" alt="Safari_browser" width="50%" height="50%">
     <p>A browser does not display the HTML tags, but uses them to determine how to display the document:</p>
     <img src="img/img1.png" alt="imagen" width="35%">
     <hr/>
