--- a/SMX2-M12-IntroHTML-GitHubPages-main/index.html
+++ b/SMX2-M12-IntroHTML-GitHubPages-main/index.html
@@ -23,8 +23,9 @@
     <!--añadir imagen 2: "img2.png" y utilizar un ancho de 100% de imagen--> <img src="img/img2.png" alt="imagen2" width="100%">
     <!--añadir una linea horizontal --> <hr/>
     <!--añadir un encabezado donde indiques el título de una nueva sección llamada "Mi repositories"  --> <h1> Mi repositories</h1>
-    <!--añadir dos enlaces a dos de tus repositorios de GITHUB que se han de abrir en pestañas diferentes del navegador. Ojo, que los repositorios han de ser públicos  --> <p><a href="https://github.com/gabrielfabrizio10/Imagenes-Adaptables"></a></p>
-    <p><a href="https://github.com/gabrielfabrizio10/SOPAXD"></a></p>
+    <!--añadir dos enlaces a dos de tus repositorios de GITHUB que se han de abrir en pestañas diferentes del navegador. Ojo, que los repositorios han de ser públicos  --> <p><a href="https://github.com/gabrielfabrizio10/Imagenes-Adaptables.com"> <a href="https://github.com/gabrielfabrizio10/Imagenes-Adaptables"> Imagenes-Adaptables</a>
+    <a href="https://github.com/gabrielfabrizio10/SOPAXD">SOPAXD</a>
+    
     
 </body>
 </html>
